# todo-station

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  config.toml.example  todo-station.rc
.github/workflows/: release.yml
src/: config.rs  main.rs  todo.rs  wallpaper.rs  weather.rs
src/device_code_flow/: device_code_responses.rs  mod.rs
src/todo/: mod.rs  token.rs
ui/: app-window.slint
